# PyFastMart

./: .cursorrules  .gitignore  AGENT.md  DEVELOPMENT.md  README.md  main.py  plan.md  pyproject.toml
frontend/: app.js  index.html  styles.css
pfm/: __init__.py  __main__.py  config.py  main.py  stripe_client.py
